--- a/assets/style.css
+++ b/assets/style.css
@@ -1,30 +1,30 @@
 @font-face {
     font-family: 'vazir';
-    src: url('fonts/vazir.woff');
+    src: url('fonts/Vazir.woff');
     font-weight: 500;
 }
 
 @font-face {
     font-family: 'vazir';
-    src: url('fonts/vazir-Bold.woff');
+    src: url('fonts/Vazir-Bold.woff');
     font-weight: 700;
 }
 
 @font-face {
     font-family: 'vazir';
-    src: url('fonts/vazir-Light.woff');
+    src: url('fonts/Vazir-Light.woff');
     font-weight: 400;
 }
 
 @font-face {
     font-family: 'vazir';
-    src: url('fonts/vazir-Medium.woff');
+    src: url('fonts/Vazir-Medium.woff');
     font-weight: 600;
 }
 
 @font-face {
     font-family: 'vazir';
-    src: url('fonts/vazir-Thin.woff');
+    src: url('fonts/Vazir-Thin.woff');
     font-weight: 300;
 }
 
