--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,5 @@
+/* Font Queries */
+
 @font-face {
     font-family: 'vazir';
     src: url('fonts/Vazir.woff');
@@ -27,6 +29,8 @@
     src: url('fonts/Vazir-Thin.woff');
     font-weight: 300;
 }
+
+/* Media Queries */
 
 @media (min-width: 576px) {
     .container {
@@ -81,4 +85,40 @@ html {
 
 a {
     color: inherit;
+}
+
+/* Components */
+
+.navbar {
+    position: relative;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -ms-flex-align: center;
+    align-items: center;
+    -ms-flex-pack: justify;
+    justify-content: center;
+    padding: 0.5rem 1rem;
+}
+
+.btn-group {
+    border-radius: 0.375rem;
+    border: 2px solid rgb(44, 44, 46);
+    overflow: hidden;
+    background-color: rgb(242, 242, 247);
+}
+
+.btn-group button {
+    background: none;
+    color: rgb(44, 44, 46);
+    border: none;
+    padding: 10px 24px;
+    cursor: pointer;
+    font-size: 1rem;
+}
+
+.btn-group button:hover {
+    background-color: rgb(44, 44, 46);
+    color: white;
 }
