--- a/assets/style.css
+++ b/assets/style.css
@@ -32,9 +32,26 @@
 
 /* Media Queries */
 
+@media (max-width: 375px) {
+    .table div {
+        width: 100%;
+    }
+}
+
+@media (min-width: 375px) {
+    .table div {
+        width: 50%;
+    }
+}
+
+
 @media (min-width: 576px) {
     .container {
         max-width: 540px;
+    }
+
+    .table div {
+        width: 50%;
     }
 }
 
@@ -42,17 +59,29 @@
     .container {
         max-width: 720px;
     }
+
+    .table div {
+        width: 40%;
+    }
 }
 
 @media (min-width: 992px) {
     .container {
         max-width: 960px;
     }
+
+    .table div {
+        width: 30%;
+    }
 }
 
 @media (min-width: 1200px) {
     .container {
         max-width: 1140px;
+    }
+
+    .table div {
+        width: 20%;
     }
 }
 
@@ -61,6 +90,13 @@
         text-decoration: inherit;
     }
 }
+
+/* Reset */
+
+a {
+    color: inherit;
+}
+
 
 html {
     box-sizing: border-box;
@@ -83,10 +119,6 @@ html {
     margin-left: auto;
 }
 
-a {
-    color: inherit;
-}
-
 /* Components */
 
 .navbar {
@@ -106,7 +138,6 @@ a {
     border-radius: 0.375rem;
     border: 2px solid rgb(44, 44, 46);
     overflow: hidden;
-    background-color: rgb(242, 242, 247);
 }
 
 .btn-group button {
@@ -114,11 +145,33 @@ a {
     color: rgb(44, 44, 46);
     border: none;
     padding: 10px 24px;
-    cursor: pointer;
-    font-size: 1rem;
 }
 
 .btn-group button:hover {
     background-color: rgb(44, 44, 46);
     color: white;
+}
+
+#content {
+    word-wrap: break-word;
+    text-align: justify;
+}
+
+.table {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.item {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+}
+
+.item img {
+    height: 150px;
 }
